# algolia-rust-blog-post-2

./: Cargo.toml  README.md
src/: main.rs
